test/files/neg/t8323.scala
object Test {
  final val a = "Bippy"
  final val b = "Dingo"
  def f(x: a.type) = x
  def f(x: b.type) = x
  def main(args: Array[String]): Unit = ()
}
